# index_runner

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  dev-requirements.txt  docker-compose.yaml  pyproject.toml  requirements.txt  test_reads.py
.github/: pull_request_template.md
.github/workflows/: test-release.yml  test.yml
docs/: linking_genome_features_to_GO_terms.md
scripts/: console  docker_deploy  docker_reset  lint  local-deploy.sh  run_integration_tests  run_tests  run_tests.sh  run_unit_tests  start_server
scripts/docker/: README.md  start_server
spec/: README.md  ama_config.yaml  config.yaml  elasticsearch_modules.yaml  narrative_config.yaml
src/: event_loop.py
src/admin_tools/: indexer_admin  main.py
src/bulk_indexers/: index_all.py
src/index_runner/: elasticsearch_consumer.py  es_indexer.py  es_writer.py  event_loop.py  index_runner.py  main.py  releng_importer.py  workspace_consumer.py
src/scripts/: run_tests.sh
src/test/: helpers.py  test_daemon.py  test_deleters.py  test_deletion.py  test_index_runner.py  test_indexers.py  test_integration.py  test_narrative_indexer.py  test_re_client.py  test_releng_import_object.py  test_run_func_once.py  wait_for_deps.py  wait_for_service.py
src/utils/: config.py  es_utils.py  formatting.py  get_es_module.py  get_path.py  get_upa_from_msg.py  kafka.py  kafka_consumer.py  logger.py  re_client.py  run_func_once.py  sample_utils.py  (+5 more)
tests/: helpers.py  test.env  test_deletion.py  test_indexers.py  test_integration.py  test_narrative_indexer.py  wait_for_deps.py
(+167 files in other folders)
