[tool.poetry]
name = "index_runner"
version = "0.0.1"
description = "Receives KBase system events and imports/indexes on Elasticsearch and Arango"
authors = ["KBase Team <info@kbase.us>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
kbase_workspace_client = "0.2.1"
biopython = "1.77"
docker = "4.2.2"
PyYAML = "5.3.1"
requests = "2.24.0"
beautifulsoup4 = "4.9.1"
markdown2 = "2.3.9"
confluent-kafka = "1.4.2"

[tool.poetry.dev-dependencies]
mypy = "0.782"
bandit = "1.6.2"
flake8 = "3.8.3"
pytest = "^6.0.1"
responses = "^0.11.0"
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
